--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.divider {
+  width: 100%;
+  height: 1px;
+  float:left;
+  background-color: black;
+  margin: 50px 0;
+}
