--- a/src/app/puzzles/day3/day3.component.html
+++ b/src/app/puzzles/day3/day3.component.html
@@ -1,1 +1,11 @@
-<p>day3 works!</p>
+<div class="explanation">
+  <h3>Day 3, Puzzle 1</h3>
+  <p>You have a toboggan and a map.  The toboggan moves only a certain angle, how many trees will you hit?</p>
+  <h4>Answer:</h4>
+  <span>{{p1num}} trees</span>
+  <div class="divider"></div>
+  <h3>Day 3, Puzzle 2</h3>
+  <p>Now, with the same map, you're given different angles, how many trees exponentially will you hit?</p>
+  <h4>Answer:</h4>
+  <span>{{p2num}} trees</span>
+</div>
