--- a/src/app/puzzles/day4/day4.component.html
+++ b/src/app/puzzles/day4/day4.component.html
@@ -1,11 +1,11 @@
 <div class="explanation">
-  <h3>Day 3, Puzzle 1</h3>
+  <h3>Day 4, Puzzle 1</h3>
   <p>You don't have a real passport, but you're fixing the system to make it look like so, how many invalid passports (not including CID) are there?</p>
   <h4>Answer:</h4>
   <span>{{p1num}} valid passports</span>
   <div class="divider"></div>
-  <h3>Day 3, Puzzle 2</h3>
-  <p>Now, with the same map, you're given different angles, how many trees exponentially will you hit?</p>
+  <h3>Day 4, Puzzle 2</h3>
+  <p>Now you have to validate the fields</p>
   <h4>Answer:</h4>
   <span>{{p2num}} valid passports</span>
 </div>
