--- a/src/app/puzzles/day5/day5.component.html
+++ b/src/app/puzzles/day5/day5.component.html
@@ -1,1 +1,11 @@
-<p>day5 works!</p>
+<div class="explanation">
+  <h3>Day 5, Puzzle 1</h3>
+  <p>You lost your ticket, so you have to scan everyone else's ticket.  You first need to find the highest ID</p>
+  <h4>Answer:</h4>
+  <span>Highest ID #{{p1num}}</span>
+  <div class="divider"></div>
+  <h3>Day 5, Puzzle 2</h3>
+  <p>Now figure out your ID</p>
+  <h4>Answer:</h4>
+  <span>Your ID #{{p2num}}</span>
+</div>
