--- a/src/app/puzzles/day6/day6.component.html
+++ b/src/app/puzzles/day6/day6.component.html
@@ -1,1 +1,11 @@
-<p>day6 works!</p>
+<div class="explanation">
+  <h3>Day 6, Puzzle 1</h3>
+  <p>People answered a survey and you need to find out how many people answered Yes.</p>
+  <h4>Answer:</h4>
+  <span>Number of yes answers {{p1num}}</span>
+  <div class="divider"></div>
+  <h3>Day 6, Puzzle 2</h3>
+  <p>Number of unique answers</p>
+  <h4>Answer:</h4>
+  <span>Unique Answers {{p2num}}</span>
+</div>
