--- a/src/app/puzzles/day7/day7.component.html
+++ b/src/app/puzzles/day7/day7.component.html
@@ -1,1 +1,11 @@
-<p>day7 works!</p>
+<div class="explanation">
+  <h3>Day 7, Puzzle 1</h3>
+  <p>You need to figure out how many bags can contain your shiny gold bag</p>
+  <h4>Answer:</h4>
+  <span>Bags containing {{p1num}}</span>
+  <div class="divider"></div>
+  <h3>Day 7, Puzzle 2</h3>
+  <p>Now you need to figure out how many bags are contained within your shiny gold bag</p>
+  <h4>Answer:</h4>
+  <span>Bags inside {{p2num}}</span>
+</div>
