--- a/src/app/puzzles/day8/day8.component.html
+++ b/src/app/puzzles/day8/day8.component.html
@@ -1,1 +1,13 @@
-<p>day8 works!</p>
+<div class="explanation">
+  <h3>Day 8, Puzzle 1</h3>
+  <p>The kid next to your on the airplanes says his device isn't working.  You notice it's stuck in a loop and try to
+  fix it, first finding out the accumulator number it's stuck on.</p>
+  <h4>Answer:</h4>
+  <span>Accumulator {{p1num}}</span>
+  <div class="divider"></div>
+  <h3>Day 8, Puzzle 2</h3>
+  <p>Knowing that the code has to hit the last line of the rule set to terminate, change a single line to make the
+  code follow its own rules to reach the last line and get the accumulator number.</p>
+  <h4>Answer:</h4>
+  <span>Accumulator {{p2num}}</span>
+</div>
