--- a/src/app/puzzles/day9/day9.component.html
+++ b/src/app/puzzles/day9/day9.component.html
@@ -1,1 +1,12 @@
-<p>day9 works!</p>
+<div class="explanation">
+  <h3>Day 9, Puzzle 1</h3>
+  <p>check preamble of 25 numbers, do any of the 25 before add to the current number</p>
+  <h4>Answer:</h4>
+  <span>{{p1num}} does not have a suitable match</span>
+  <div class="divider"></div>
+  <h3>Day 9, Puzzle 2</h3>
+  <p>Knowing that the code has to hit the last line of the rule set to terminate, change a single line to make the
+    code follow its own rules to reach the last line and get the accumulator number.</p>
+  <h4>Answer:</h4>
+  <span>Accumulator {{p2num}}</span>
+</div>
